[gd_scene load_steps=18 format=3 uid="uid://c8hace4v5se8t"]

[ext_resource type="PackedScene" uid="uid://cs306kobnhuyg" path="res://scenes/enemy/enemy.tscn" id="1_dpo1a"]
[ext_resource type="Script" path="res://scripts/ai/bomber/enemy_bomber.gd" id="2_tu5iu"]
[ext_resource type="PackedScene" uid="uid://dt5nldbnh8v0h" path="res://scenes/items/heart.tscn" id="3_wehbs"]
[ext_resource type="Texture2D" uid="uid://dds2mg7lp6tcw" path="res://assets/sprites/enemy_bomber.png" id="4_8pn7h"]
[ext_resource type="PackedScene" uid="uid://ba1h2yk2m8uj8" path="res://scenes/items/experience.tscn" id="5_eoh41"]
[ext_resource type="Script" path="res://scripts/ai/bomber/enemy_bomber_chase_state.gd" id="7_qf1gq"]
[ext_resource type="Script" path="res://scripts/ai/bomber/enemy_bomber_attack_state.gd" id="8_82gv3"]
[ext_resource type="Script" path="res://scripts/ai/finite_state_machine.gd" id="8_ajm7g"]
[ext_resource type="PackedScene" uid="uid://di6kx544mafbb" path="res://scenes/particles/fire_trail.tscn" id="10_whpok"]
[ext_resource type="PackedScene" uid="uid://bo1dpf7iwmhyj" path="res://scenes/particles/burn.tscn" id="12_p2pjn"]

[sub_resource type="Animation" id="Animation_rg8k7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_tdfqm"]
resource_name = "explode"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.470588, 0.470588, 1), Color(1, 1, 1, 1), Color(1, 0.470588, 0.470588, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"die"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FireTrail:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-0.5, -7), Vector2(-0.5, -5), Vector2(-0.5, -8), Vector2(-0.5, -8), Vector2(-0.5, -6), Vector2(-0.5, -4)]
}

[sub_resource type="Animation" id="Animation_il4o6"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_dap7q"]
resource_name = "move"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_y6aga"]
resource_name = "take_damage"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.278431, 0.278431, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_rux1o"]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.470588, 0.470588, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"die"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FireTrail:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-0.5, -7), Vector2(-0.5, -6), Vector2(-0.5, -5), Vector2(-0.5, -4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ywkr"]
_data = {
"RESET": SubResource("Animation_rg8k7"),
"attack": SubResource("Animation_rux1o"),
"explode": SubResource("Animation_tdfqm"),
"idle": SubResource("Animation_il4o6"),
"move": SubResource("Animation_dap7q"),
"take_damage": SubResource("Animation_y6aga")
}

[node name="EnemyBomber" instance=ExtResource("1_dpo1a")]
script = ExtResource("2_tu5iu")
heart_drop = ExtResource("3_wehbs")
score_value = 1
max_health = 20
experience_drop = ExtResource("5_eoh41")
attack_range = 20.0
detect_radius = 10000

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(-0.5, -0.5)
scale = Vector2(0.9, 0.9)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]
libraries = {
"": SubResource("AnimationLibrary_1ywkr")
}

[node name="Body" parent="." index="2"]
texture = ExtResource("4_8pn7h")
hframes = 11
frame = 4

[node name="BurnTimer" type="Timer" parent="." index="6"]
one_shot = true

[node name="FiniteStateMachine" type="Node" parent="." index="8" node_paths=PackedStringArray("state")]
script = ExtResource("8_ajm7g")
state = NodePath("EnemyBomberChaseState")

[node name="EnemyBomberChaseState" type="Node" parent="FiniteStateMachine" index="0" node_paths=PackedStringArray("actor", "animator", "ray_cast_player")]
script = ExtResource("7_qf1gq")
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")
ray_cast_player = NodePath("../../PlayerDetection")

[node name="EnemyBomberAttackState" type="Node" parent="FiniteStateMachine" index="1" node_paths=PackedStringArray("actor", "animator", "ray_cast_player")]
script = ExtResource("8_82gv3")
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")
ray_cast_player = NodePath("../../PlayerDetection")

[node name="ObstacleDetection1" type="RayCast2D" parent="." index="9"]
target_position = Vector2(55, 0)

[node name="ObstacleDetection2" type="RayCast2D" parent="." index="10"]
position = Vector2(0, -3)
target_position = Vector2(35, 0)

[node name="ObstacleDetection3" type="RayCast2D" parent="." index="11"]
position = Vector2(0, 3)
target_position = Vector2(35, 0)

[node name="ObstacleDetectionSide1" type="RayCast2D" parent="." index="12"]
position = Vector2(0, 2)
target_position = Vector2(25, 12)

[node name="ObstacleDetectionSide2" type="RayCast2D" parent="." index="13"]
position = Vector2(0, -2)
target_position = Vector2(25, -12)

[node name="PlayerDetection" type="RayCast2D" parent="." index="14"]
target_position = Vector2(66, 0)
collision_mask = 3

[node name="Burn" parent="." index="15" instance=ExtResource("12_p2pjn")]
position = Vector2(-3, 8)

[node name="FireTrail" parent="." index="16" instance=ExtResource("10_whpok")]
position = Vector2(-0.5, -7)

[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="timeout" from="MachineGunTimer" to="." method="_on_MachineGunTimer_timeout"]
[connection signal="timeout" from="BurnTimer" to="." method="_on_burn_timer_timeout"]
